<resources>
    <string name="app_name">Dora Music</string>
    <string name="unknown">Unknown</string>
    <string name="protocol_title">User Agreement and Privacy Policy</string>
    <string name="protocol_content_part_one">Thank you for using Dora Music! To help you use Dora Music products and services with confidence, please carefully read and fully understand the terms in the agreement before clicking agree, so you can better exercise your personal rights and protect your personal information.</string>
    <string name="protocol_content_part_two">[Please note] If you do not agree to the following agreement or any of its terms, you can click disagree and stop using Dora’s products and services. By clicking agree, you indicate that you have read and agreed to the "Dora Music User License Agreement" and the "Privacy Policy".</string>
    <string name="user_agreement">Dora Music User License Agreement</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="user_agreement_title">User Agreement</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="protocol_agree">Agree</string>
    <string name="protocol_disagree">Disagree</string>
    <string name="my_music">My Songs</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="folder">Folder</string>
    <string name="my_favorite">My Favorites</string>
    <string name="latest_play">Recently</string>
    <string name="items">%1$d songs</string>
    <string name="scaning">Scanning…</string>
    <string name="press_again_to_back">Press again to return to the desktop</string>
    <string name="scan_prompt">You have favorite songs. Scanning will forcibly clear the favorites. Do you want to continue?</string>
    <string name="qr_code_scan_result">QR Code Scan Result</string>
    <string name="choose_color">Choose Color</string>
    <string name="equalizer">Equalizer</string>
    <string name="close">Close</string>
    <string name="custom">Custom</string>
    <string name="pop">Pop</string>
    <string name="dance">Dance</string>
    <string name="blue">Blues</string>
    <string name="classic">Classical</string>
    <string name="jazz">Jazz</string>
    <string name="slow">Slow</string>
    <string name="slots">Electronic</string>
    <string name="shake">Rock</string>
    <string name="country">Country</string>
    <string name="setting">Settings</string>
    <string name="auto_play_on_launch">Auto Play on Launch</string>
    <string name="shake_to_play_next_music">Shake to Skip Track</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="bass_boost">Bass Boost</string>
    <string name="close_banner">Close banner</string>
    <string name="keep_alive">Keep screen on</string>
    <string name="logout">Logout</string>
    <string name="brand">Dora Music</string>
    <string name="slogan">Listen Anytime</string>
    <string name="music_list">Music List</string>
    <string name="upload_music">Upload Music</string>
    <string name="scan_music">Scan Music</string>
    <string name="change_skin">Change Skin</string>
    <string name="sequential_playback">"Sequential Playback"</string>
    <string name="shuffle_playback">"Shuffle Playback"</string>
    <string name="single_track_loop">"Single Track Loop"</string>
    <string name="playlist_loop">"Playlist Loop"</string>
    <string name="no_lyrics">No lyrics</string>
    <string name="support_project">Support Project</string>
    <string name="donation_desc_1">Do my humble part.</string>
    <string name="donation_desc_2">Thank you very much.</string>
    <string name="donation_desc_3">I want to sponsor.</string>
    <string name="i_want_to_donate">I want to donate.</string>
    <string name="donation_speech">To express my gratitude to the project team, I voluntarily donate tokens.</string>
    <string name="app_desc">An open-source Android mobile music player.</string>
    <string name="disconnect_wallet">Disconnect Wallet</string>
    <string name="share_with_friends">Share With Friends</string>
    <string name="share_content">"I found a great mobile music player: http://www.dorachat.com/doramusic-cn.apk"</string>
    <string name="select_sharing_method">Select sharing method</string>
    <string name="music_scan_successfully">Detected %1$d songs</string>
    <string name="no_songs_scanned">No songs scanned</string>
    <string name="donate_successfully">We have received your donation. Thank you for your support! Transaction hash: %1$s</string>
    <string name="auto_connect_vpn_on_launch">Auto VPN Connect on Launch</string>
    <string name="check_update">Check Update</string>
    <string name="already_latest_version">Already the latest version.</string>
    <string name="donation_certificate">Donation Certificate</string>
    <string name="appreciation_content">Thank You for Your Support

Dear Donor,

Thank you for your support and donation to our software project. Your support is crucial for the continuous development and maintenance of the project. We will continue to optimize our features, improve the user experience, and give back to the community.

We sincerely appreciate your generosity and trust!

Best regards,

The [Dora Music] Team</string>
    <string name="are_you_sure_sign_out">Are you sure you want to sign out?</string>
    <string name="discord">Discord</string>
    <string name="donation_detail">Donation Time:%1$s\nTransaction Hash:%2$s</string>
    <string name="evm_login_first">Please log in with your EVM wallet first.</string>
    <string name="uploaded_successfully">Upload successful</string>
    <string name="suggestion">Suggestion</string>
    <string name="question">Question</string>
    <string name="please_input_content">Please input content.</string>
    <string name="submitting_please_wait">Submitting, please wait.</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_title">Feedback Content</string>
    <string name="input_feedback_content">Enter the content you want to give feedback</string>
    <string name="feedback_successfully">Feedback successful, thank you for your support!</string>
    <string name="failed_to_feedback">Feedback failed, please try again later!</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="wallet_connected">The wallet has already been connected.</string>
    <string name="using_wallet_authorization_first">Please log in using wallet authorization first.</string>
    <string name="at_least_6_characters_long">The password must be at least 6 characters long.</string>
    <string name="chat_room">Chat Room</string>
    <string name="recalled_a_message">I recalled a message</string>
    <string name="color_name_custom">Custom</string>
    <string name="color_name_cyan">Cyan</string>
    <string name="color_name_orange">Orange</string>
    <string name="color_name_black">Black</string>
    <string name="color_name_green">Green</string>
    <string name="color_name_red">Red</string>
    <string name="color_name_blue">Blue</string>
    <string name="color_name_purple">Purple</string>
    <string name="color_name_yellow">Yellow</string>
    <string name="color_name_pink">Pink</string>
    <string name="color_name_gold">Gold</string>
    <string name="my_gallery">My Gallery</string>
    <string name="draw_cards_to_collect_gallery">Draw Card</string>
    <string name="all_collected">All collected</string>
    <string name="collection_complete">Awesome! Your collection is complete!</string>
    <string name="insufficient_points">Insufficient points!</string>
    <string name="you_already_own_this_card">You already own this card.</string>
    <string name="rain_forest">Rain Forest</string>
    <string name="gallery_name_format">Collection Name: %1$s</string>
    <string name="my_points_format">My Points: %1$d</string>
    <string name="listening_reward">Listening Reward</string>
    <string name="daily_login_reward">Daily Login Reward</string>
    <string name="task_reward">Task Reward</string>
    <string name="event_reward">Event Reward</string>
    <string name="gacha_cost">Gacha Cost</string>
    <string name="exchange_cost">Exchange Cost</string>
    <string name="draw_card_btn_text">Draw Card (Costs 100 Points)</string>
    <string name="storage_permission_prompt"><![CDATA[Requesting file access permission to identify songs. You can also manually enable file access permission in [Settings] -> [Apps] -> [Permissions].]]></string>
    <string name="guessing">Guessing</string>
    <string name="guessing_rank">Guessing Rank</string>
    <string name="my_predictions">My Predictions</string>
    <string name="input_bet_score">Input bet scores</string>
    <string name="confirm">Confirm</string>
    <string name="time_format">Time: %1$s</string>
    <string name="odds_format">Odds: %1$s</string>
    <string name="already_bet_another_option">You have already placed a bet on another option and can only continue adding to it.</string>
    <string name="bet_successful">Bet successful</string>
    <string name="failed_to_bet">Failed to bet</string>
    <string name="rate">Rate</string>
    <string name="profit">Profit</string>
    <string name="bet">Bet</string>
    <string name="win_rate_ranking">Win Rate Ranking</string>
    <string name="profit_loss_ranking">Profit &amp; Loss Ranking</string>
    <string name="bet_ranking">Bet Ranking</string>
    <string name="claim_reward">Claim Reward</string>
    <string name="claimed">Claimed</string>
    <string name="bet_format">Bet: %1$d</string>
    <string name="reward_format">Reward: %1$d</string>
    <string name="set_nickname">Set nickname</string>
    <string name="please_input_nickanme">Please input nickname</string>
    <string name="bonus_format">Bonus: %1$d</string>
    <string name="click_here">CLICK HERE</string>
    <string name="player_bg">Player Background</string>
    <string name="set_background">Set Background</string>
    <string name="background_default">Default</string>
    <string name="background_unlocked">Unlocked</string>
    <string name="background_locked">Locked</string>
    <string name="current_background">Current Background</string>
    <string name="background_not_unlocked">Background not unlocked</string>
    <string name="background_selected">Selected %1$s</string>
    <string name="change_bg">Change Background</string>
    <string name="background_reset">Background has been reset</string>
    <string name="msg_recalled">[Recalled]</string>
    <string name="msg_not_sent">Message not sent</string>
    <string name="result_adapter_selected">Selected</string>
    <string name="result_adapter_add">Add</string>
    <string name="no_read_music_permission">No music read permission</string>
    <string name="failed_to_claim">Failed to claim</string>
    <string name="input_content">Input content</string>
    <string name="default_guessing_topic">Guessing contest is now open—click here to join</string>
    <string name="search_music_hint">Search Music/Singer</string>
    <string name="scan">Scan</string>
    <string name="prepare_to_scan_local_music">Prepare to scan local music</string>
    <string name="selected_0_1000">Selected 0 / 1000</string>
    <string name="add_all">Add all</string>
    <string name="add_to_local_music">Add to local music</string>
    <string name="minus_15_minutes">-15 minutes</string>
    <string name="plus_15_minutes">+15 minutes</string>
    <string name="cancel_auto_pause">Cancel to auto pause</string>
    <string name="_30_minutes">30 Minutes</string>
    <string name="_45_minutes">45 Minutes</string>
    <string name="_60_minutes">60 Minutes</string>
    <string name="guessing_rule">Guessing Rule</string>
    <string name="recall_message">Recall message</string>
    <string name="delete_message">Delete message</string>
    <string name="copy">Copy</string>
    <string name="_30_00">30:00</string>
</resources>