<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/dialog_bg">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_nickname"
        android:textSize="16sp"
        android:textColor="@color/colorTextPrimary" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/please_input_nickanme"
        android:maxLength="16"
        android:maxLines="1"
        android:textSize="15sp"
        android:paddingHorizontal="12dp" />

    <TextView
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="12dp"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:background="@drawable/selector_normal_btn" />

</LinearLayout>