<?xml version="1.0" encoding="utf-8"?>

<!-- 均衡器界面 -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/statusbar_equalizer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/skin_theme_color" />

        <dora.widget.DoraTitleBar
            android:id="@+id/titlebar_equalizer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_bar_height"
            android:background="@color/skin_theme_color"
            app:dview_backIconTint="@color/white"
            app:dview_backIconSize="@dimen/title_bar_icon_size"
            app:dview_title="@string/equalizer"
            app:dview_titleTextSize="@dimen/title_bar_text_size"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPanelBg">

            <dora.widget.DoraEqualizerView
                android:id="@+id/ev_equalizer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/equalizer_height"
                android:layout_marginTop="20dp" />
            <View
                android:id="@+id/divider_equalizer"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/ev_equalizer"
                android:background="@color/divider_color"/>
            <HorizontalScrollView
                android:id="@+id/hsv_equalizer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider_equalizer"
                android:fillViewport="true"
                android:scrollbars="none">

                <RadioGroup
                    android:id="@+id/rg_equalizer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPanelBg"
                    android:checkedButton="@+id/rb_equalizer_close"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_equalizer_close"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_equalizer_radio_button"
                        android:padding="10dp"
                        android:text="@string/close"
                        android:textSize="@dimen/equalizer_type_text_size"
                        android:textColor="@color/equalizer_radio_button_text_color" />

                    <RadioButton
                        android:id="@+id/rb_equalizer_custom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_equalizer_radio_button"
                        android:padding="10dp"
                        android:text="@string/custom"
                        android:textSize="@dimen/equalizer_type_text_size"
                        android:textColor="@color/equalizer_radio_button_text_color" />

                    <RadioButton
                        android:id="@+id/rb_equalizer_pop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_equalizer_radio_button"
                        android:padding="10dp"
                        android:text="@string/pop"
                        android:textSize="@dimen/equalizer_type_text_size"
                        android:textColor="@color/equalizer_radio_button_text_color" />

                    <RadioButton
                        android:id="@+id/rb_equalizer_dance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_equalizer_radio_button"
                        android:padding="10dp"
                        android:text="@string/dance"
                        android:textSize="@dimen/equalizer_type_text_size"
                        android:textColor="@color/equalizer_radio_button_text_color" />

                    <RadioButton
                        android:id="@+id/rb_equalizer_blue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_equalizer_radio_button"
                        android:padding="10dp"
                        android:text="@string/blue"
                        android:textSize="@dimen/equalizer_type_text_size"
                        android:textColor="@color/equalizer_radio_button_text_color" />

                    <RadioButton
                        android:id="@+id/rb_equalizer_classic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_equalizer_radio_button"
                        android:padding="10dp"
                        android:text="@string/classic"
                        android:textSize="@dimen/equalizer_type_text_size"
                        android:textColor="@color/equalizer_radio_button_text_color" />

                    <RadioButton
                        android:id="@+id/rb_equalizer_jazz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_equalizer_radio_button"
                        android:padding="10dp"
                        android:text="@string/jazz"
                        android:textSize="@dimen/equalizer_type_text_size"
                        android:textColor="@color/equalizer_radio_button_text_color" />

                    <RadioButton
                        android:id="@+id/rb_equalizer_slow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_equalizer_radio_button"
                        android:padding="10dp"
                        android:text="@string/slow"
                        android:textSize="@dimen/equalizer_type_text_size"
                        android:textColor="@color/equalizer_radio_button_text_color" />

                    <RadioButton
                        android:id="@+id/rb_equalizer_slots"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_equalizer_radio_button"
                        android:padding="10dp"
                        android:text="@string/slots"
                        android:textSize="@dimen/equalizer_type_text_size"
                        android:textColor="@color/equalizer_radio_button_text_color" />

                    <RadioButton
                        android:id="@+id/rb_equalizer_shake"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_equalizer_radio_button"
                        android:padding="10dp"
                        android:text="@string/shake"
                        android:textSize="@dimen/equalizer_type_text_size"
                        android:textColor="@color/equalizer_radio_button_text_color" />

                    <RadioButton
                        android:id="@+id/rb_equalizer_country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_equalizer_radio_button"
                        android:padding="10dp"
                        android:text="@string/country"
                        android:textSize="@dimen/equalizer_type_text_size"
                        android:textColor="@color/equalizer_radio_button_text_color" />
                </RadioGroup>
            </HorizontalScrollView>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/hsv_equalizer"
                android:background="@color/divider_color"/>
        </RelativeLayout>
    </LinearLayout>
</layout>
