<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/protocol_title"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingLeft="20dip"
                android:paddingRight="20dip">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/protocol_content_part_one"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:gravity="center_horizontal"
                android:paddingLeft="20dip"
                android:paddingRight="20dip">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/protocol_content_part_two"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:layout_marginBottom="48dip"
                android:orientation="vertical"
                android:paddingLeft="20dip"
                android:paddingRight="20dip">

                <TextView
                    android:id="@+id/tv_protocol_service_protocol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="17dip"
                    android:text="@string/service_protocol"
                    android:textColor="@color/blue"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_protocol_privacy_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="17dip"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/blue"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#eeeeee" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_protocol_disagree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_marginBottom="10dip"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/protocol_disagree"
            android:textColor="@color/dialog_text_color"
            android:textSize="15sp" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#eeeeee" />

        <TextView
            android:id="@+id/tv_protocol_agree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_marginBottom="10dip"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/protocol_agree"
            android:textColor="@color/dialog_text_color"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>

